Fixed issues with UI

--- a/views/download.erb
+++ b/views/download.erb
@@ -5,6 +5,7 @@
 </head>
 <body>
     <h1>Processing Complete!</h1>
-    <p><a href="<%= file %>" download>Click here to download the final CSV</a></p>
+    <p><a href="/processed/final_output.csv" download>Click here to download the final CSV</a></p>
+    
 </body>
 </html>
