Update removed.rb to remove rows
Rows already tagged 'REMOVE' on upload will be deleted before processing

Update style of download button

--- a/views/download.erb
+++ b/views/download.erb
@@ -24,7 +24,7 @@
 <body>
     <h1>Processing Complete!</h1>
     <form action="/processed/<%= File.basename(file) %>" method="get">
-        <button type="submit" class="download_button">Download File</button>
+        <button type="submit" class="download-button">Download File</button>
     </form>
     
     <div>
